# def-form

./: .gitignore  Justfile  LICENSE  README.md  pyproject.toml
.github/workflows/: pypi.yml  tests.yml
def_form/cli/: cli.py  console.py  context.py  main.py
def_form/cli/commands/: check.py  format.py  options.py
def_form/cli/console/: __init__.py  base.py  null.py  rich.py
def_form/cli/errors/: __init__.py
def_form/cli/ui/: __init__.py  base.py  null.py  rich.py
def_form/core/: __init__.py  base.py  checker.py  formatter.py  manager.py  node_builder.py  params.py
def_form/core/rules/: __init__.py  base.py  context.py  max_def_length.py  max_inline_args.py  multiline_params_indent.py
def_form/exceptions/: base.py  def_formatter.py
def_form/formatters/: __init__.py
def_form/formatters/def_formatter/: __init__.py  base.py  checker.py  formatter.py  manager.py  models.py
def_form/utils/: find_pyproject.py
tests/: conftest.py  constants.py  helpers.py
tests/cases/async_def/: source.py
tests/cases/async_def_with_args/: expected.py  source.py
tests/cases/async_multiline_bad_comment/: expected.py  expected_issues.json  source.py
tests/cases/class_async_def_with_args/: expected.py  expected_issues.json  source.py
tests/cases/class_def_with_kw_args/: expected.py  source.py
tests/cases/class_def_with_kw_only_args/: expected.py  source.py
tests/cases/class_method/: expected.py
tests/cases/class_method_kw_only_with_comments/: expected.py  expected_issues.json  source.py
tests/cases/class_method_long_name/: expected.py  expected_issues.json  source.py
tests/cases/class_method_multiline_bad/: expected.py  source.py
tests/cases/class_method_skipped/: source.py
tests/cases/class_method_with_args/: expected.py  source.py
tests/cases/class_method_with_args_with_typehints/: expected.py  expected_issues.json  source.py
tests/cases/class_static_method/: source.py
tests/cases/decorated_multiline_bad/: expected.py  expected_issues.json  source.py
tests/cases/def_kw_args_first/: expected.py  source.py
tests/cases/def_too_long/: expected.py  expected_issues.json  source.py
tests/cases/def_with_decorator/: source.py
tests/cases/def_with_decorator_and_args/: expected.py  source.py
tests/cases/kw_args/: expected.py  source.py
tests/cases/long_typehint_no_args/: source.py
tests/cases/long_typehint_with_args/: expected.py  expected_issues.json  source.py
tests/cases/multiline_bad_indent/: expected.py  source.py
tests/cases/no_issues_already_formatted/: source.py
tests/cases/no_issues_empty_def/: source.py
tests/cases/single_line_comment_first/: expected.py  source.py
tests/cases/single_line_comment_last/: expected.py  source.py
tests/cases/single_line_comment_middle/: expected.py  source.py
tests/cases/single_line_kw_only_with_comments/: expected.py  source.py
tests/cases/single_line_needs_format/: expected.py  expected_issues.json  source.py
tests/cases/single_line_ok_no_format/: expected.py
tests/cases/single_line_return_type_comment/: expected.py
tests/cases/single_line_with_all_features/: expected.py  source.py
tests/cases/skip_comment/: source.py
tests/cases/skipped_with_decorator/: source.py
tests/cases/skipped_with_right_comment/: source.py
tests/cases/to_much_inline_args_with_typehints/: expected.py  source.py
tests/cases/too_many_inline_args/: expected.py  source.py
tests/cases/truly_async_single_line_with_comment/: expected.py  source.py
tests/cases/truly_class_method_kw_only/: expected.py  expected_issues.json  source.py
tests/cases/truly_class_method_single_line/: expected.py  source.py
tests/cases/with_comments/: expected.py  (+1 more)
tests/mock_data/: __init__.py  example.py  expected.py
tests/test_checker/: test_checker.py
tests/test_cli/: test_cli_invoke.py  test_commands.py  test_console.py  test_main.py  test_ui.py
tests/test_core/: test_base.py  test_manager.py  test_rules_base.py
tests/test_formatter/: test_formatter.py
tests/test_utils/: test_find_pyproject.py
(+16 files in other folders)
